@@ -1022,6 +1022,12 @@ SetMatrixSize(null,2,3)						[0,0,0;0,0,0]
 ExpandMatrix(null)+1						((null)+1)
 CrossProduct ([-2,1,4],[3,2,5])					[-3;22;-7]
 CrossProduct ([3;2;5],[-2;1;4])					[3;-22;7]
+Permutations(2,3)						[[1,2],[2,1],[1,3],[3,1],[2,3],[3,2]]
+Combinations(2,3)						[[1,2],[1,3],[2,3]]
+Combinations(3,2)						Combinations(3,2)
+Permutations(3,2)						Permutations(3,2)
+Combinations(-1,2)						Combinations(-1,2)
+Permutations(-1,2)						Permutations(-1,2)
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
